Changing the CheckForUpdates time from every 5 seconds to every 15 seconds. This is to avoid spamming Github too much

--- a/Gitria/Content/bootstrap.css
+++ b/Gitria/Content/bootstrap.css
@@ -391,6 +391,7 @@ img {
 }
 
 .img-size-7 {
+  min-width: 50px;
   width: 7%;
 }
 
